<resources>
    <string name="app_name">Battery Manager</string>
    <string name="useApp">با این برنامه شما می توانید:</string>
    <string name="Battery">مدیریت باتری</string>
    <string name="status">وضعیت باتری</string>
    <string name="voltage">ولتاژ</string>
    <string name="tec">تکنولوژی</string>
    <string name="plug">شارژر</string>
    <string name="temp">دما</string>
    <string name="arman_aris21_gmail_com">arman.aris21@gmail.com</string>
    <string name="appUsage">برنامه ها</string>
</resources>